fix: z-index issue

--- a/components/CursorEffect/CursorEffect.module.scss
+++ b/components/CursorEffect/CursorEffect.module.scss
@@ -6,7 +6,7 @@
   height: 100vh;
   pointer-events: none;
   overflow: hidden;
-  z-index: 100;
+  z-index: 10039021931201;
 
   @media screen and (max-width: 768px) {
     display: none;
